
 * Fixed http://plone.org/collector/4448 index titles in smart folder's
   criteria edit form were not translated
   [hannosch]

1.0.0-rc4 2005-08-09
====================

 * Implemented the custom PUT_factory in both ATCTOrderedFolder and
   ATCTBTreeFolder, as inheriting it from ATCTFolderMixin breaks when
   LinguaPlone comes into play.
   [stefan]

 * Enable syndication on topics by default.
   [alecm]

 * Made inherit criteria field only appear when the parent of a Smart Folder
   is also a Smart folder.
   [alecm]

 * Added permissions checks to listSubTopics.
   [alecm]

 * Remove Smart Folder syndication action as the action category has changed
   in CMF.
   [alecm]

 * Fixed bug in subtopic listing.
   [alecm]

1.0.0-rc3 2005-08-01
====================

 * Change manage_copyObjects' permission to Copy or move, just copy from
   Plone's PortalFolder.
   [panjunyong]

 * Added method to fix the portal type name of CMF based objects
   that were imported or copied from an unmigrated site to a migrated
   site. The fix method is available in the type migration tab.
   [tiran]

 * Added code to remove deprecated external methods.
   [tiran]

 * Fixed an error in the module alias code for the exif library. Fixes
   http://plone.org/collector/4352 - Uploading certain images causes ATCT
   pickling errors
   [tiran]

 * Expose some advanced migration options to the user by using new propertites
   in the portal_atct tool.
   [tiran]

 * Enhanced and updated documentation, mostly the feature documentations in
   the portal_atct tool.
   [tiran]

 * Moved migration related code from tool/atct.py to tool/migration.py. The
   tool class was getting too long.
   [tiran]

1.0.0-rc2 2005-07-28
====================

 * Updated requirements to CMFDynamicViewFTI 1.0.0 and ATRefBrowserWidget
   1.1.
   [tiran]

 * Fixed error in config loader code. The loader must stop after the first
   conf file is loaded or the conf file is overwritten by the default file.