@@ -1,3 +1,7 @@
+ * Fixed ATFile not to use 'Content-Disposition: attachment' respose header
+   in index_html method to make it compatible with CMF. Or, uploaded html 
+   files can't be viewed online(always download).
+   [panjunyong]
 
  * Fixed http://plone.org/collector/4448 index titles in smart folder's
    criteria edit form were not translated
